--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -1,7 +1,9 @@
 # main links
 main:
+  # - title: "Home"
+  #   url: /
   - title: "About me"
-    url: /
+    url: /about
   - title: "Publications"
     url: /publications
   - title: "Outreach"
