--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,11 +4,11 @@ main:
   #   url: /
   - title: "About me"
     url: /about
-  - title: "Publications"
-    url: /publications
+  - title: "Research"
+    url: /research
   - title: "Outreach"
     url: /outreach
-  - title: "Projects"
-    url: /projects
-  - title: "Blog"
-    url: /blog
+  # - title: "Projects"
+  #   url: /projects
+  # - title: "Blog"
+  #   url: /blog
