--- a/_config.yml
+++ b/_config.yml
@@ -112,7 +112,7 @@ author:
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
-      url: "mailto:maria@ifisc.uib-csic.es"
+      url: "mailto:martinezbarbeitomaria@gmail.com"
     - label: "Twitter"
       icon: "fab fa-fw fa-twitter-square"
       url: "https://twitter.com/mariamartinz13"
