Update on July 7th, 2025 - updated about and phd and added sports

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -4,7 +4,9 @@ main:
   #   url: /
   - title: "About me"
     url: /about
-  - title: "PhD journey"
+  - title: "PhD"
     url: /phd
   - title: "Outreach"
     url: /outreach
+  - title: "Sports"
+    url: /sports
