July 8th, 2025. Created interests page, added sports and hiking to it.

--- a/_data/navigation.yml
+++ b/_data/navigation.yml
@@ -8,5 +8,5 @@ main:
     url: /phd
   - title: "Outreach"
     url: /outreach
-  - title: "Sports"
-    url: /sports
+  - title: "Interests"
+    url: /interests
