--- a/_config.yml
+++ b/_config.yml
@@ -105,17 +105,14 @@ analytics:
 # Site Author
 author:
   name             : "María Martínez Barbeito"
-  avatar           : "/assets/images/profile_pic.jpg" # path of avatar image, e.g. "/assets/images/bio-photo.jpg"
+  avatar           : "/assets/images/profile_pic.jpg"
   bio              : "PhD in Physics"
   location         : "Mallorca (Spain)"
-  #email            : maria@ifisc.uib-csic.es
+  #email            :  
   links:
     - label: "Email"
       icon: "fas fa-fw fa-envelope-square"
       url: "mailto:martinezbarbeitomaria@gmail.com"
-    # - label: "Twitter"
-    #   icon: "fab fa-fw fa-twitter-square"
-    #   url: "https://twitter.com/mariamartinz13"
     - label: "Google Scholar"
       icon: "fas fa-graduation-cap"
       url: "https://scholar.google.com/citations?user=5us7cmgAAAAJ&hl=es&oi=ao"
@@ -125,9 +122,9 @@ author:
     - label: "Linkedin"
       icon: "fab fa-linkedin"
       url: "https://www.linkedin.com/in/mariamartinezbarbeito"
-    # - label: "GitLab"
-    #   icon: "fab fa-gitlab"
-    #   url: "https://gitlab.ifisc.uib-csic.es/power-grid/f90model/"
+    - label: "CV"
+      icon: "far fa-file-alt"
+      url: "/assets/cv/CV_martinezbarbeito_2025-07-09.pdf"
 
 
 # Site Footer
